--- a/index.html
+++ b/index.html
@@ -14,9 +14,142 @@
 
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
 </head>
 <body>
+<!-- HEADER -->
+    <header>
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-10">
+                    <h2>START BOOTSTRAP</h2>
+                </div>
+                <div class="col-2">
+                    menu
+                </div>
+            </div>
+        </div>
+    </header>
+<!-- /HEADER -->
+
+<!-- MAIN -->
+    <main>
+<!-- JUMBOTRON -->
+        <section class="jumbotron">
+            <div class="container">
+                <div class="container-fluid">
+                    <img src="img/avatar.svg" alt="Avatar">
+                    <h1>START BOODSTRAP</h1>
+                    <hr>
+                    <h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
+                </div>
+            </div>
+        </section>
+<!-- /JUMBOTRON -->
+
+<!-- PORTFOLIO -->
+        <section class="portfolio">
+            <div class="container">
+                <h2>PORTFOLIO</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="img/cabin.png" alt="Cobin">
+                    </div>
+                    <div class="col-12">
+                        <img src="img/cake.png" alt="Cake">
+                    </div>
+                    <div class="col-12">
+                        <img src="img/circus.png" alt="Circus">
+                    </div>
+                    <div class="col-12">
+                        <img src="img/game.png" alt="Game">
+                    </div>
+                    <div class="col-12">
+                        <img src="img/safe.png" alt="Safe">
+                    </div>
+                    <div class="col-12">
+                        <img src="img/submarine.png" alt="Submarine">
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- /PORTFOLIO -->
+
+<!-- ABOUT -->
+        <section class="about">
+            <div class="ms_container">
+                <div class="container-fluid">
+                    <h2>ABOUT</h2>
+                    <hr>
+                    <div class="row">
+                        <div class="col-12">
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                        </div>
+                        <div class="col-12">
+                            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                        </div>
+                        <div class="col-12 d-flex justify-content-center">
+                            <button>Download</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- /ABOUT -->
+
+<!-- CONTACT -->
+        <section class="contact">
+            <div class="ms_container">
+                <div class="container-fluid">
+                    <div class="contact-text">
+                        <h2>CONTACT ME</h2>
+                        <hr>
+                        <h3>Name</h3>
+                        <hr>
+                        <h3>Email Address</h3>
+                        <hr>
+                        <h3>Phone Number</h3>
+                        <hr>
+                        <h3>Message</h3>
+                    </div>
+                    <div class="contact-text">
+                        <hr>
+                        <button>Send</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+<!-- /CONTACT -->
+    </main>
+<!-- /MAIN -->
+
+<!-- FOOTER -->
+    <footer>
+        <section class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>LOCATION</h2>
+                        <h2>2215 John Daniel Drive Clark, MO 52243</h2>
+                    </div>
+                    <div class="col-12">
+                        <h2>AROUND THE WEB</h2>
+                        <p>ICONA ICONA ICONA ICONA</p>
+                    </div>
+                    <div class="col-12">
+                        <h2>ABOUT FREELANCER</h2>
+                        <h2>Freelance is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span></h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="footer-2">
+            <p>Copyright &#0169; Your Website 2019</p>
+        </section>
+    </footer>
+<!-- /FOOTER -->
     
 </body>
 </html>
