Creato layout tablet e desktop

--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
     <header>
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-10">
+                <div class="col-8">
                     <h2>START BOOTSTRAP</h2>
                 </div>
-                <div class="col-2">
-                    menu
+                <div class="col-4">
+                    <nav class="d-md-none d-flex justify-content-end">
+                        Menu
+                    </nav>
+                    <nav class="d-none d-md-block">
+                        <ul class="ms_menu-list d-flex justify-content-end">
+                            <li>
+                                <a href="">PORTFOLIO</a>
+                            </li>
+                            <li>
+                                <a href="">ABOUT</a>
+                            </li>
+                            <li>
+                                <a href="">CONTACT</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
@@ -37,12 +52,10 @@
 <!-- JUMBOTRON -->
         <section class="jumbotron">
             <div class="container">
-                <div class="container-fluid">
-                    <img src="img/avatar.svg" alt="Avatar">
-                    <h1>START BOODSTRAP</h1>
-                    <hr>
-                    <h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
-                </div>
+                <img src="img/avatar.svg" alt="Avatar">
+                <h1>START BOODSTRAP</h1>
+                <hr>
+                <h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
             </div>
         </section>
 <!-- /JUMBOTRON -->
@@ -53,22 +66,22 @@
                 <h2>PORTFOLIO</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/cabin.png" alt="Cobin">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/cake.png" alt="Cake">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/circus.png" alt="Circus">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/game.png" alt="Game">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/safe.png" alt="Safe">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/submarine.png" alt="Submarine">
                     </div>
                 </div>
@@ -83,10 +96,10 @@
                     <h2>ABOUT</h2>
                     <hr>
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-12 col-md-6">
                             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-6">
                             <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                         </div>
                         <div class="col-12 d-flex justify-content-center">
@@ -130,17 +143,17 @@
         <section class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <h2>LOCATION</h2>
-                        <h2>2215 John Daniel Drive Clark, MO 52243</h2>
+                        <p>2215 John Daniel Drive Clark, MO 52243</p>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <h2>AROUND THE WEB</h2>
-                        <p>ICONA ICONA ICONA ICONA</p>
+                        <span>ICONA ICONA ICONA ICONA</span>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <h2>ABOUT FREELANCER</h2>
-                        <h2>Freelance is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span></h2>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span></p>
                     </div>
                 </div>
             </div>
