Completato sezione jumbotron e portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-4">
                     <nav class="d-md-none d-flex justify-content-end">
-                        Menu
+                        <span><i class="fa-solid fa-bars"></i></span>
                     </nav>
                     <nav class="d-none d-md-block">
                         <ul class="ms_menu-list d-flex justify-content-end">
@@ -54,17 +54,25 @@
             <div class="container">
                 <img src="img/avatar.svg" alt="Avatar">
                 <h1>START BOODSTRAP</h1>
-                <hr>
+                <div class="star d-flex align-items-center justify-content-center">
+                    <div class="white"></div>
+                    <i class="fa-solid fa-star"></i>
+                    <div class="white"></div>
+                </div>
                 <h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
             </div>
         </section>
 <!-- /JUMBOTRON -->
 
 <!-- PORTFOLIO -->
-        <section class="portfolio">
+        <section class="portfolio text-center">
             <div class="container">
                 <h2>PORTFOLIO</h2>
-                <hr>
+                <div class="star d-flex align-items-center justify-content-center">
+                    <div class="black"></div>
+                    <i class="fa-solid fa-star"></i>
+                    <div class="black"></div>
+                </div>
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/cabin.png" alt="Cobin">
