--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-8">
-                    <h2>START BOOTSTRAP</h2>
+                    <h2 class="m-0">START BOOTSTRAP</h2>
                 </div>
                 <div class="col-4">
                     <nav class="d-md-none d-flex justify-content-end">
                         <span><i class="fa-solid fa-bars"></i></span>
                     </nav>
                     <nav class="d-none d-md-block">
-                        <ul class="ms_menu-list d-flex justify-content-end">
+                        <ul class="my_menu-list d-flex justify-content-end m-0">
                             <li>
                                 <a href="">PORTFOLIO</a>
                             </li>
-                            <li>
+                            <li class="ms-3">
                                 <a href="">ABOUT</a>
                             </li>
-                            <li>
+                            <li class="ms-3">
                                 <a href="">CONTACT</a>
                             </li>
                         </ul>
@@ -50,16 +50,16 @@
 <!-- MAIN -->
     <main>
 <!-- JUMBOTRON -->
-        <section class="jumbotron">
+        <section class="jumbotron text-center">
             <div class="container">
-                <img src="img/avatar.svg" alt="Avatar">
-                <h1>START BOODSTRAP</h1>
+                <img class="my-4" src="img/avatar.svg" alt="Avatar">
+                <h1 class="pb-3">START BOODSTRAP</h1>
                 <div class="star d-flex align-items-center justify-content-center">
                     <div class="white"></div>
-                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star px-2"></i>
                     <div class="white"></div>
                 </div>
-                <h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
+                <h2 class="pt-4 pb-5">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
             </div>
         </section>
 <!-- /JUMBOTRON -->
@@ -67,10 +67,10 @@
 <!-- PORTFOLIO -->
         <section class="portfolio text-center">
             <div class="container">
-                <h2>PORTFOLIO</h2>
-                <div class="star d-flex align-items-center justify-content-center">
+                <h2 class="pt-5 pb-4">PORTFOLIO</h2>
+                <div class="star d-flex align-items-center justify-content-center mb-3">
                     <div class="black"></div>
-                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star px-2"></i>
                     <div class="black"></div>
                 </div>
                 <div class="row">
@@ -99,19 +99,23 @@
 
 <!-- ABOUT -->
         <section class="about">
-            <div class="ms_container">
+            <div class="my_container">
                 <div class="container-fluid">
-                    <h2>ABOUT</h2>
-                    <hr>
+                    <h2 class="text-center pt-5 pb-4">ABOUT</h2>
+                    <div class="star d-flex align-items-center justify-content-center mb-3">
+                        <div class="white"></div>
+                        <i class="fa-solid fa-star px-2"></i>
+                        <div class="white"></div>
+                    </div>
                     <div class="row">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 mb-1">
                             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 mb-3">
                             <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                         </div>
-                        <div class="col-12 d-flex justify-content-center">
-                            <button>Download</button>
+                        <div class="col-12 d-flex justify-content-center mt-2 mb-4">
+                            <button type="button" class="btn btn-outline-primary"><i class="fa-solid fa-download"></i> Download</button>
                         </div>
                     </div>
                 </div>
@@ -121,7 +125,7 @@
 
 <!-- CONTACT -->
         <section class="contact">
-            <div class="ms_container">
+            <div class="my_container">
                 <div class="container-fluid">
                     <div class="contact-text">
                         <h2>CONTACT ME</h2>
