--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- MAIN -->
     <main>
-<!-- JUMBOTRON -->
+<!-- SECTION-JUMBOTRON -->
         <section class="jumbotron text-center">
             <div class="container">
                 <img class="my-4" src="img/avatar.svg" alt="Avatar">
@@ -62,9 +62,9 @@
                 <h2 class="pt-4 pb-5">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
             </div>
         </section>
-<!-- /JUMBOTRON -->
+<!-- /SECTION-JUMBOTRON -->
 
-<!-- PORTFOLIO -->
+<!-- SECTION-PORTFOLIO -->
         <section class="portfolio text-center mb-5">
             <div class="container">
                 <h2 class="pt-5 pb-4">PORTFOLIO</h2>
@@ -95,9 +95,9 @@
                 </div>
             </div>
         </section>
-<!-- /PORTFOLIO -->
+<!-- /SECTION-PORTFOLIO -->
 
-<!-- ABOUT -->
+<!-- SECTION-ABOUT -->
         <section class="about">
             <div class="my_container">
                 <div class="container-fluid">
@@ -121,9 +121,9 @@
                 </div>
             </div>
         </section>
-<!-- /ABOUT -->
+<!-- /SECTION-ABOUT -->
 
-<!-- CONTACT -->
+<!-- SECTION-CONTACT -->
         <section class="contact">
             <div class="my_container">
                 <div class="container-fluid">
@@ -144,7 +144,7 @@
                                 <label for="floatingInput">Email address</label>
                             </div>
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="floatingNumber" placeholder="">
+                                <input type="tel" class="form-control" id="floatingNumber" placeholder="">
                                 <label for="floatingNumber">Phone Number</label>
                             </div>
                             <div class="form-floating">
@@ -157,31 +157,34 @@
                 </div>
             </div>
         </section>
-<!-- /CONTACT -->
+<!-- /SECTION-CONTACT -->
     </main>
 <!-- /MAIN -->
 
 <!-- FOOTER -->
     <footer>
-        <section class="footer">
+        <section class="footer-t text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 my-3">
                         <h2>LOCATION</h2>
                         <p>2215 John Daniel Drive Clark, MO 52243</p>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 my-3">
                         <h2>AROUND THE WEB</h2>
-                        <span>ICONA ICONA ICONA ICONA</span>
+                        <span><i class="fa-brands fa-facebook-f"></i></span>
+                        <span><i class="fa-brands fa-google-plus-g"></i></span>
+                        <span><i class="fa-brands fa-twitter"></i></span>
+                        <span><i class="fa-brands fa-linkedin-in"></i></span>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 my-3">
                         <h2>ABOUT FREELANCER</h2>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span></p>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green">Start Bootstrap</span></p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="footer-2">
+        <section class="footer-b ">
             <p>Copyright &#0169; Your Website 2019</p>
         </section>
     </footer>
