Completata versione mobile

--- a/index.html
+++ b/index.html
@@ -163,28 +163,38 @@
 
 <!-- FOOTER -->
     <footer>
-        <section class="footer-t text-center">
+        <section class="footer-t text-center pt-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-4 my-3">
+                    <div class="col-12 col-md-4 mt-4">
                         <h2>LOCATION</h2>
                         <p>2215 John Daniel Drive Clark, MO 52243</p>
                     </div>
-                    <div class="col-12 col-md-4 my-3">
+                    <div class="col-12 col-md-4 mt-4">
                         <h2>AROUND THE WEB</h2>
-                        <span><i class="fa-brands fa-facebook-f"></i></span>
-                        <span><i class="fa-brands fa-google-plus-g"></i></span>
-                        <span><i class="fa-brands fa-twitter"></i></span>
-                        <span><i class="fa-brands fa-linkedin-in"></i></span>
+                        <ul class="my_list-footer d-flex justify-content-center p-0">
+                            <li class="d-flex align-items-center justify-content-center mx-1">
+                                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-center mx-1">
+                                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-center mx-1">
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-center mx-1">
+                                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col-12 col-md-4 my-3">
+                    <div class="col-12 col-md-4 mt-4 mb-5">
                         <h2>ABOUT FREELANCER</h2>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green">Start Bootstrap</span></p>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green">Start Bootstrap</span>.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="footer-b ">
+        <section class="footer-b text-center pt-4 pb-4">
             <p>Copyright &#0169; Your Website 2019</p>
         </section>
     </footer>
