Completata versione tablet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- STYLE-CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- RESPONSIVE-CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
+
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -56,7 +59,7 @@
                 <h1 class="pb-3">START BOODSTRAP</h1>
                 <div class="star d-flex align-items-center justify-content-center">
                     <div class="white"></div>
-                    <i class="fa-solid fa-star px-2"></i>
+                    <i class="fa-solid fa-star px-2 px-md-3"></i>
                     <div class="white"></div>
                 </div>
                 <h2 class="pt-4 pb-5">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
@@ -70,7 +73,7 @@
                 <h2 class="pt-5 pb-4">PORTFOLIO</h2>
                 <div class="star d-flex align-items-center justify-content-center mb-3">
                     <div class="black"></div>
-                    <i class="fa-solid fa-star px-2"></i>
+                    <i class="fa-solid fa-star px-2 px-md-3"></i>
                     <div class="black"></div>
                 </div>
                 <div class="row">
@@ -104,7 +107,7 @@
                     <h2 class="text-center pt-5 pb-4">ABOUT</h2>
                     <div class="star d-flex align-items-center justify-content-center mb-3">
                         <div class="white"></div>
-                        <i class="fa-solid fa-star px-2"></i>
+                        <i class="fa-solid fa-star px-2 px-md-3"></i>
                         <div class="white"></div>
                     </div>
                     <div class="row">
@@ -114,7 +117,7 @@
                         <div class="col-12 col-md-6 mb-3">
                             <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                         </div>
-                        <div class="col-12 d-flex justify-content-center mt-2 mb-4">
+                        <div class="col-12 d-flex justify-content-center mt-2 mb-5">
                             <button type="button" class="btn btn-outline-primary"><i class="fa-solid fa-download"></i> Download</button>
                         </div>
                     </div>
@@ -131,7 +134,7 @@
                         <h2 class="text-center pt-5 pb-4">CONTACT ME</h2>
                         <div class="star d-flex align-items-center justify-content-center mb-3">
                             <div class="black"></div>
-                            <i class="fa-solid fa-star px-2"></i>
+                            <i class="fa-solid fa-star px-2 px-md-3"></i>
                             <div class="black"></div>
                         </div>
                         <form action="">
@@ -187,7 +190,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-4 mt-4 mb-5">
+                    <div class="col-12 col-md-4 mt-4 mb-5 mb-md-3">
                         <h2>ABOUT FREELANCER</h2>
                         <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green">Start Bootstrap</span>.</p>
                     </div>
