Completata versione desktop

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h1 class="pb-3">START BOODSTRAP</h1>
                 <div class="star d-flex align-items-center justify-content-center">
                     <div class="white"></div>
-                    <i class="fa-solid fa-star px-2 px-md-3"></i>
+                    <i class="fa-solid fa-star px-2 px-md-3 px-lg-4"></i>
                     <div class="white"></div>
                 </div>
                 <h2 class="pt-4 pb-5">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2>
@@ -73,7 +73,7 @@
                 <h2 class="pt-5 pb-4">PORTFOLIO</h2>
                 <div class="star d-flex align-items-center justify-content-center mb-3">
                     <div class="black"></div>
-                    <i class="fa-solid fa-star px-2 px-md-3"></i>
+                    <i class="fa-solid fa-star px-2 px-md-3 px-lg-4"></i>
                     <div class="black"></div>
                 </div>
                 <div class="row">
@@ -107,7 +107,7 @@
                     <h2 class="text-center pt-5 pb-4">ABOUT</h2>
                     <div class="star d-flex align-items-center justify-content-center mb-3">
                         <div class="white"></div>
-                        <i class="fa-solid fa-star px-2 px-md-3"></i>
+                        <i class="fa-solid fa-star px-2 px-md-3 px-lg-4"></i>
                         <div class="white"></div>
                     </div>
                     <div class="row">
@@ -134,7 +134,7 @@
                         <h2 class="text-center pt-5 pb-4">CONTACT ME</h2>
                         <div class="star d-flex align-items-center justify-content-center mb-3">
                             <div class="black"></div>
-                            <i class="fa-solid fa-star px-2 px-md-3"></i>
+                            <i class="fa-solid fa-star px-2 px-md-3 px-lg-4"></i>
                             <div class="black"></div>
                         </div>
                         <form action="">
